test/library/packages/Sort/errors/errors-comparator.compopts
-scomparator=empty        # errors-comparator.empty.good
-scomparator=wrong        # errors-comparator.wrong.good
-scomparator=keyargs      # errors-comparator.keyargs.good
-scomparator=compareargs  # errors-comparator.compareargs.good
